Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -72,15 +72,15 @@ msgid "- Nor will I advertise a discount percentage for any specific cruise"
 msgstr ""
 
 #: pages/public/disclosure.vue
-msgid "- This represents %{ activeIDsPercentage } of all Active Partners"
+msgid "- This represents %{ activeIDsPercentage }% of all Active Partners"
 msgstr ""
 
 #: pages/public/disclosure.vue
-msgid "- This represents %{ incomeEarnerPercentage } of all Active Partners"
+msgid "- This represents %{ incomeEarnerPercentage }% of all Active Partners"
 msgstr ""
 
 #: pages/public/disclosure.vue
-msgid "- This represents %{ membershipFreePercentage } of all Active Partners"
+msgid "- This represents %{ membershipFreePercentage }% of all Active Partners"
 msgstr ""
 
 #: components/agreements/leadership_agreement.vue
